--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "react-text-mask": "^5.4.3",
     "yup": "^0.27.0"
   },
   "scripts": {
